add feature boards
